메인 작업중 비쥬얼 완료

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -26,10 +26,10 @@
 					<div class="visual__mask">
 						<div class="swiper-container">
 							<div class="swiper-wrapper">
-								<div class="swiper-slide">
+								<div class="swiper-slide swiper-no-swiping">
 									<div class="visual__video">
-										<video loop muted>
-											<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+										<video loop muted poster="./assets/images/dummy.png">
+											<source src="../sample01.mp4" type="video/mp4">
 										</video>
 									</div>
 									<div class="visual__contents">
@@ -43,11 +43,38 @@
 										</dov>
 									</div>
 								</div>
-								<div class="swiper-slide">
+								<div class="swiper-slide swiper-no-swiping">
 									<div class="visual__video">
-										<video loop muted>
-											<source src="https://googlechrome.github.io/samples/muted-autoplay/chrome-clip.mp4" type="video/mp4">
+										<video loop muted poster="./assets/images/dummy.png">
+											<source src="../sample02.mp4" type="video/mp4">
 										</video>
+									</div>
+									<div class="visual__contents">
+										<dov class="visual__inner">
+											<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
+											<p class="visual__title">
+												INSTANT<br>
+												POOL
+											</p>
+											<a href="#" class="visual__link">VIEW</a>
+										</dov>
+									</div>
+								</div>
+								<div class="swiper-slide swiper-no-swiping">
+									<div class="visual__video">
+										<video loop muted poster="./assets/images/dummy.png">
+											<source src="../sample03.mp4" type="video/mp4">
+										</video>
+									</div>
+									<div class="visual__contents">
+										<dov class="visual__inner">
+											<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
+											<p class="visual__title">
+												INSTANT<br>
+												POOL
+											</p>
+											<a href="#" class="visual__link">VIEW</a>
+										</dov>
 									</div>
 								</div>
 							</div>
@@ -57,12 +84,17 @@
 							<div class="visual__preview">
 								<div class="visual__video">
 									<video autoplay loop muted>
-										<source src="https://sample-videos.com/video123/mp4/720/big_buck_bunny_720p_1mb.mp4" type="video/mp4">
+										<source src="../sample01.mp4" type="video/mp4">
 									</video>
 								</div>
 								<div class="visual__video">
-									<video muted>
-										<source src="https://googlechrome.github.io/samples/muted-autoplay/chrome-clip.mp4" type="video/mp4">
+									<video autoplay loop muted>
+										<source src="../sample02.mp4" type="video/mp4">
+									</video>
+								</div>
+								<div class="visual__video">
+									<video autoplay loop muted>
+										<source src="../sample03.mp4" type="video/mp4">
 									</video>
 								</div>
 							</div>
@@ -72,14 +104,8 @@
 										<span class="carousel__text">NEXT</span>
 										<span class="carousel__text">NEXT</span>
 										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
 									</p>
 									<p class="carousel__loop">
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
 										<span class="carousel__text">NEXT</span>
 										<span class="carousel__text">NEXT</span>
 										<span class="carousel__text">NEXT</span>
