carousel > marquee 로 변경, 스타일 수정

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -98,17 +98,31 @@
 									</video>
 								</div>
 							</div>
-							<div class="carousel">
-								<div class="carousel__mask">
-									<p class="carousel__loop">
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
+							<div class="marquee">
+								<div class="marquee__mask">
+									<p class="marquee__loop">
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
 									</p>
-									<p class="carousel__loop">
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
-										<span class="carousel__text">NEXT</span>
+									<p class="marquee__loop">
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+									</p>
+									<p class="marquee__loop">
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+									</p>
+									<p class="marquee__loop">
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
+										<span class="marquee__text">NEXT</span>
 									</p>
 								</div>
 							</div>
@@ -117,36 +131,32 @@
 				</div>
 			</div>
 			<div class="best-menu">
-				<div class="carousel">
-					<div class="carousel">
-						<div class="carousel__mask">
-							<p class="carousel__loop">
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
+				<div class="marquee">
+					<div class="marquee">
+						<div class="marquee__mask">
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
 							</p>
-							<p class="carousel__loop">
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+							</p>
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+							</p>
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
 							</p>
 						</div>
 					</div>
@@ -557,36 +567,36 @@
 						</div>
 					</div>
 				</div>
-				<div class="carousel">
-					<div class="carousel">
-						<div class="carousel__mask">
-							<p class="carousel__loop">
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
+				<div class="marquee">
+					<div class="marquee">
+						<div class="marquee__mask">
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
 							</p>
-							<p class="carousel__loop">
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
-								<span class="carousel__text">BEST</span>
+							<p class="marquee__loop">
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
+								<span class="marquee__text">BEST</span>
 							</p>
 						</div>
 					</div>
