--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -53,23 +53,23 @@
 								<div class="menu__round menu__round--lightgreen">
 									<div class="menu__inner">
 										<!-- soldout -->
-										<div class="carousel">
-											<div class="carousel__mask">
-												<p class="carousel__loop">
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
+										<div class="marquee">
+											<div class="marquee__mask">
+												<p class="marquee__loop">
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
 												</p>
-												<p class="carousel__loop">
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
-													<span class="carousel__text">SOLD OUT</span>
+												<p class="marquee__loop">
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
 												</p>
 											</div>
 										</div>
