헤더 검색 추가

--- a/src/PC_MAN_1000.html
+++ b/src/PC_MAN_1000.html
@@ -17,6 +17,7 @@
 	<div id="wrap">
 		@@include('./inc/header.inc', {
 			"login": "true",
+			"search": "false",
 			"webroot": "."
 		})
 
@@ -130,121 +131,6 @@
 					</div>
 				</div>
 			</div>
-
-
-
-			<!-- <div class="visual">
-				<div class="visual__container">
-					<div class="visual__mask">
-						
-					</div>
-					<div class="swiper-container">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide swiper-no-swiping">
-								<div class="visual__video">
-									<video loop muted poster="./assets/images/dummy.png">
-										<source src="../sample01.mp4" type="video/mp4">
-									</video>
-								</div>
-								<div class="visual__contents">
-									<dov class="visual__inner">
-										<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
-										<p class="visual__title">
-											INSTANT<br>
-											POOL
-										</p>
-										<a href="#" class="visual__link">VIEW</a>
-									</dov>
-								</div>
-							</div>
-							<div class="swiper-slide swiper-no-swiping">
-								<div class="visual__video">
-									<video loop muted poster="./assets/images/dummy.png">
-										<source src="../sample02.mp4" type="video/mp4">
-									</video>
-								</div>
-								<div class="visual__contents">
-									<dov class="visual__inner">
-										<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
-										<p class="visual__title">
-											INSTANT<br>
-											POOL
-										</p>
-										<a href="#" class="visual__link">VIEW</a>
-									</dov>
-								</div>
-							</div>
-							<div class="swiper-slide swiper-no-swiping">
-								<div class="visual__video">
-									<video loop muted poster="./assets/images/dummy.png">
-										<source src="../sample03.mp4" type="video/mp4">
-									</video>
-								</div>
-								<div class="visual__contents">
-									<dov class="visual__inner">
-										<p class="visual__theme">22SS BEYOND Y2K PART 2,3</p>
-										<p class="visual__title">
-											INSTANT<br>
-											POOL
-										</p>
-										<a href="#" class="visual__link">VIEW</a>
-									</dov>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-pagination"></div>
-					</div>
-					<div class="visual__control">
-						<div class="visual__preview">
-							<div class="visual__video">
-								<video autoplay loop muted>
-									<source src="../sample01.mp4" type="video/mp4">
-								</video>
-							</div>
-							<div class="visual__video">
-								<video autoplay loop muted>
-									<source src="../sample02.mp4" type="video/mp4">
-								</video>
-							</div>
-							<div class="visual__video">
-								<video autoplay loop muted>
-									<source src="../sample03.mp4" type="video/mp4">
-								</video>
-							</div>
-						</div>
-						<div class="marquee">
-							<div class="marquee__mask">
-								<p class="marquee__loop">
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-								</p>
-								<p class="marquee__loop">
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-								</p>
-								<p class="marquee__loop">
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-								</p>
-								<p class="marquee__loop">
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-									<span class="marquee__text">NEXT</span>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
-
-
 			<div class="best-menu">
 				<div class="marquee">
 					<div class="marquee">
