--- a/src/index.html
+++ b/src/index.html
@@ -55,10 +55,10 @@
 					<td>작업중</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td><a href="#" target="_blank">./#</a></td>
-					<td></td>
+					<td>검색</td>
+					<td>PC_ODR_1001</td>
+					<td><a href="./search/PC_ODR_1001.html" target="_blank">./search/PC_ODR_1001.html</a></td>
+					<td>작업중</td>
 				</tr>
 				<tr>
 					<td></td>
