상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -91,6 +91,7 @@
 							</div>
 							<ul class="product__reivew--list">
 								<li class="rv__item">
+									<p class="rv__figure"><img src="../assets/images/temp/@product.png"></p>
 									<p class="rv__box">
 										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 									</p>
