푸터 모바일 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>상품상세</title>
+	<title>인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 상품상세</title>
 	
 	<script src="../assets/js/jquery-2.1.1.js"></script>
 	<script src="../assets/js/modernizr.js"></script>
