모바일 메뉴 index  확인필요

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -14,11 +14,11 @@
 </head>
 <body>
 	<div id="wrap">
-		@@include('../inc/header.inc', {
+		<!-- @@include('../inc/header.inc', {
 			"login": "false",
 			"search": "false",
 			"webroot": ".."
-		})
+		}) -->
 
     <div class="container sub__container">
 
