상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -221,14 +221,60 @@
 						</div>
 					</div>
 
-					<div id="prdTalkwalk" class="product__section">
+					<div id="prdTalkwalk" class="product__section product__talkwalk">
 						<div>
 							<img src="../assets/images/temp/@talkwalk.jpg">
 						</div>
 					</div>
 
 					<div id="prdReview" class="product__section">
+						<div class="review__head">
+							<div class="review__sort">
+								<p class="review_sort--head">전체 <i class="arrow"></i></p>
+								<ul class="review__sorting">
+									<li><a href="#">전체</a></li>
+									<li><a href="#">최신순</a></li>
+									<li><a href="#">평점순</a></li>
+									<li><a href="#">좋아요순</a></li>
+									<li><a href="#">조회수순</a></li>
+								</ul>
+							</div>
 
+							<div class="review__etc">
+								<a href="#" class="btn__rvWrite">WRITE</a>
+							</div>
+						</div>	
+
+						<div class="review__list">
+							<ul class="review__list--cont">
+								<li>
+									<a href="#">
+										<div class="rv__product">
+											<p class="rv__figure"><img src="../assets/images/temp/@product.png"></p>
+											<div class="rv__box">
+												<p class="rv__prname">Rinen Striped Jacket</p>
+												<span class="rv__prcode">448374@N</span>
+											</div>
+											<p class="rv__count">
+												<span class="ic_star"></span>
+												4.8 <span>(36)</span>
+											</p>
+										</div>
+									</a>
+									<a href="#">
+										<div class="rv__review">
+											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요 
+												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
+												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
+											<p class="rv__thumnb">
+												<span>(8+)</span>
+												<img src="../assets/images/temp/@product.png"></p>
+											</p>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<!--// detail content -->
