메인 1차 완료

--- a/src/product/PC_SHP_1000.html
+++ b/src/product/PC_SHP_1000.html
@@ -19,10 +19,10 @@
 			"webroot": ".."
 		})
 
-    <div id="container">
+    <div class="container">
 			<div class="menu">
 				<div class="menu__container">
-					<ul class="menu__list menu__list--col3">
+					<ul class="menu__list">
 						<li class="menu__item">
 							<a href="#" class="menu__link">
 								<div class="menu__round menu__round--purple">
@@ -31,7 +31,7 @@
 											<ul class="menu__track swiper-wrapper">
 												<li class="menu__slide swiper-slide">
 													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
+														<img src="../assets/images/product.png" alt="상품">
 													</div>
 												</li>
 											</ul>
@@ -39,9 +39,7 @@
 									</div>
 								</div>
 								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-									</div>
+									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
 										<p class="menu__discount">₩46,000</p>
 										<p class="menu__price">₩50,000(30%)</p>
@@ -61,12 +59,20 @@
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
+												</p>
+												<p class="marquee__loop">
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
 												</p>
 												<p class="marquee__loop">
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+													<span class="marquee__text">SOLD OUT</span>
+												</p>
+												<p class="marquee__loop">
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
 													<span class="marquee__text">SOLD OUT</span>
@@ -79,7 +85,7 @@
 											<ul class="menu__track swiper-wrapper">
 												<li class="menu__slide swiper-slide">
 													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
+														<img src="../assets/images/product.png" alt="상품">
 													</div>
 												</li>
 											</ul>
@@ -87,11 +93,9 @@
 									</div>
 								</div>
 								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-										<span class="menu__coupon">COUPON</span>
-									</div>
+									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
+										<span class="menu__coupon">COUPON</span>
 										<p class="menu__price">₩50,000</p>
 									</div>
 								</div>
@@ -105,7 +109,7 @@
 											<ul class="menu__track swiper-wrapper">
 												<li class="menu__slide swiper-slide">
 													<div class="menu__img">
-														<img src="./assets/images/product.png" alt="상품">
+														<img src="../assets/images/product.png" alt="상품">
 													</div>
 												</li>
 											</ul>
@@ -113,11 +117,9 @@
 									</div>
 								</div>
 								<div class="menu__info">
-									<div class="menu__left">
-										<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-										<span class="menu__coupon">COUPON</span>
-									</div>
+									<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 									<div class="menu__right">
+										<span class="menu__coupon">COUPON</span>
 										<p class="menu__price">₩50,000</p>
 									</div>
 								</div>
