--- a/src/search/PC_ODR_1001.html
+++ b/src/search/PC_ODR_1001.html
@@ -26,7 +26,7 @@
 				<div class="search__result">
 					<div class="menu">
 						<div class="menu__container">
-							<ul class="menu__list menu__list--col3">
+							<ul class="menu__list">
 								<li class="menu__item">
 									<a href="#" class="menu__link">
 										<div class="menu__round menu__round--purple">
@@ -35,7 +35,7 @@
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
 															<div class="menu__img">
-																<img src="./assets/images/product.png" alt="상품">
+																<img src="../assets/images/product.png" alt="상품">
 															</div>
 														</li>
 													</ul>
@@ -43,9 +43,7 @@
 											</div>
 										</div>
 										<div class="menu__info">
-											<div class="menu__left">
-												<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-											</div>
+											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 											<div class="menu__right">
 												<p class="menu__discount">₩46,000</p>
 												<p class="menu__price">₩50,000(30%)</p>
@@ -65,12 +63,20 @@
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
+														</p>
+														<p class="marquee__loop">
+															<span class="marquee__text">SOLD OUT</span>
+															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
 														</p>
 														<p class="marquee__loop">
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
+															<span class="marquee__text">SOLD OUT</span>
+															<span class="marquee__text">SOLD OUT</span>
+														</p>
+														<p class="marquee__loop">
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
 															<span class="marquee__text">SOLD OUT</span>
@@ -83,7 +89,7 @@
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
 															<div class="menu__img">
-																<img src="./assets/images/product.png" alt="상품">
+																<img src="../assets/images/product.png" alt="상품">
 															</div>
 														</li>
 													</ul>
@@ -91,11 +97,9 @@
 											</div>
 										</div>
 										<div class="menu__info">
-											<div class="menu__left">
-												<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-												<span class="menu__coupon">COUPON</span>
-											</div>
+											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 											<div class="menu__right">
+												<span class="menu__coupon">COUPON</span>
 												<p class="menu__price">₩50,000</p>
 											</div>
 										</div>
@@ -109,7 +113,7 @@
 													<ul class="menu__track swiper-wrapper">
 														<li class="menu__slide swiper-slide">
 															<div class="menu__img">
-																<img src="./assets/images/product.png" alt="상품">
+																<img src="../assets/images/product.png" alt="상품">
 															</div>
 														</li>
 													</ul>
@@ -117,11 +121,9 @@
 											</div>
 										</div>
 										<div class="menu__info">
-											<div class="menu__left">
-												<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
-												<span class="menu__coupon">COUPON</span>
-											</div>
+											<p class="menu__name">22SS 레이어드 크롭 자켓 핑크</p>
 											<div class="menu__right">
+												<span class="menu__coupon">COUPON</span>
 												<p class="menu__price">₩50,000</p>
 											</div>
 										</div>
