상품상세 작업중

--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -267,11 +267,19 @@
 												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
 												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
 											<p class="rv__thumnb">
-												<span>(8+)</span>
-												<img src="../assets/images/temp/@product.png"></p>
+												<span>8<em>+</em></span>
+												<img src="../assets/images/dummy.png"></p>
 											</p>
 										</div>
 									</a>
+									<div class="rv__moreinfo">
+										<div>
+											<button class="btn__rvlike"></button>
+											좋아요 <span>10</span>
+										</div>
+										<p>조회수 <span>10</span></p>
+										<p>작성일 <span>2022-04-26 14:25</span></p>
+									</div>
 								</li>
 							</ul>
 						</div>
