--- a/src/product/PC_SHP_1001.html
+++ b/src/product/PC_SHP_1001.html
@@ -91,7 +91,7 @@
 							</div>
 							<ul class="product__reivew--list">
 								<li class="rv__item">
-									<p class="rv__figure"><img src="../assets/images/temp/@product.png"></p>
+									<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 									<p class="rv__box">
 										<span class="rv__writer">test***</span> 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당 아기 로션 냄새가 날 것 같은 티 너무 예뻐서 애용중입니당
 									</p>
@@ -245,11 +245,11 @@
 						</div>	
 
 						<div class="review__list">
-							<ul class="review__list--cont">
-								<li>
+							<ul class="review__list--cont card_board">
+								<li class="review__list--item">
 									<a href="#">
 										<div class="rv__product">
-											<p class="rv__figure"><img src="../assets/images/temp/@product.png"></p>
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
 											<div class="rv__box">
 												<p class="rv__prname">Rinen Striped Jacket</p>
 												<span class="rv__prcode">448374@N</span>
@@ -271,16 +271,176 @@
 											</p>
 										</div>
 									</a>
-									<div class="rv__moreinfo">
-										<div>
-											<button class="btn__rvlike"></button>
+									<div class="rv__morecnt">
+										<div class="morecnt_section">
+											<button type="button" class="btn__rvlike"></button>
 											좋아요 <span>10</span>
 										</div>
-										<p>조회수 <span>10</span></p>
-										<p>작성일 <span>2022-04-26 14:25</span></p>
+										<p class="morecnt_section">조회수 <span>10</span></p>
+										<p class="morecnt_section">작성일 <span>2022-04-26 14:25</span></p>
 									</div>
+									<div class="rv__moreinfo">
+										<p class="info_tag">158~168cm</p>
+										<p class="info_tag">40~48kg</p>
+										<p class="info_tag">M</p>
+
+										<button type="button" class="btn__rvshare"></button>
+									</div>
+									<p class="review__list--line"></p>
+								</li>
+								<li class="review__list--item">
+									<a href="#">
+										<div class="rv__product">
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<div class="rv__box">
+												<p class="rv__prname">Rinen Striped Jacket</p>
+												<span class="rv__prcode">448374@N</span>
+											</div>
+											<p class="rv__count">
+												<span class="ic_star"></span>
+												4.8 <span>(36)</span>
+											</p>
+										</div>
+									</a>
+									<a href="#">
+										<div class="rv__review">
+											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
+											<p class="rv__thumnb">
+												<span>8<em>+</em></span>
+												<img src="../assets/images/dummy.png"></p>
+											</p>
+										</div>
+									</a>
+									<div class="rv__morecnt">
+										<div class="morecnt_section">
+											<button type="button" class="btn__rvlike"></button>
+											좋아요 <span>10</span>
+										</div>
+										<p class="morecnt_section">조회수 <span>10</span></p>
+										<p class="morecnt_section">작성일 <span>2022-04-26 14:25</span></p>
+									</div>
+									<div class="rv__moreinfo">
+										<p class="info_tag">158~168cm</p>
+										<p class="info_tag">40~48kg</p>
+										<p class="info_tag">M</p>
+									</div>
+									<p class="review__list--line"></p>
+								</li>
+								<li class="review__list--item">
+									<a href="#">
+										<div class="rv__product">
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<div class="rv__box">
+												<p class="rv__prname">Rinen Striped Jacket</p>
+												<span class="rv__prcode">448374@N</span>
+											</div>
+											<p class="rv__count">
+												<span class="ic_star"></span>
+												4.8 <span>(36)</span>
+											</p>
+										</div>
+									</a>
+									<a href="#">
+										<div class="rv__review">
+											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요 
+												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
+												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
+											<p class="rv__thumnb">
+												<span>8<em>+</em></span>
+												<img src="../assets/images/dummy.png"></p>
+											</p>
+										</div>
+									</a>
+									<div class="rv__morecnt">
+										<div class="morecnt_section">
+											<button type="button" class="btn__rvlike"></button>
+											좋아요 <span>10</span>
+										</div>
+										<p class="morecnt_section">조회수 <span>10</span></p>
+										<p class="morecnt_section">작성일 <span>2022-04-26 14:25</span></p>
+									</div>
+									<div class="rv__moreinfo">
+										<p class="info_tag">158~168cm</p>
+										<p class="info_tag">40~48kg</p>
+										<p class="info_tag">M</p>
+									</div>
+									<p class="review__list--line"></p>
+								</li>
+								<li class="review__list--item">
+									<a href="#">
+										<div class="rv__product">
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<div class="rv__box">
+												<p class="rv__prname">Rinen Striped Jacket</p>
+												<span class="rv__prcode">448374@N</span>
+											</div>
+											<p class="rv__count">
+												<span class="ic_star"></span>
+												4.8 <span>(36)</span>
+											</p>
+										</div>
+									</a>
+									<a href="#">
+										<div class="rv__review">
+											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요 
+												예뻐용 매장에서 피팅해보구 주문했는데 청바지에두 예쁘구 평일 출근룩 교복템이에용
+												손올리묜 배는 살짝살짝 보여요! 제가원하던 느낌! <br>쟐입구있어영ㅎㅎ</p>
+										</div>
+									</a>
+									<div class="rv__morecnt">
+										<div class="morecnt_section">
+											<button type="button" class="btn__rvlike"></button>
+											좋아요 <span>10</span>
+										</div>
+										<p class="morecnt_section">조회수 <span>10</span></p>
+										<p class="morecnt_section">작성일 <span>2022-04-26 14:25</span></p>
+									</div>
+									<div class="rv__moreinfo">
+										<p class="info_tag">158~168cm</p>
+										<p class="info_tag">40~48kg</p>
+										<p class="info_tag">M</p>
+									</div>
+									<p class="review__list--line"></p>
+								</li>
+								<li class="review__list--item">
+									<a href="#">
+										<div class="rv__product">
+											<p class="rv__figure"><img src="../assets/images/temp/@product01.png"></p>
+											<div class="rv__box">
+												<p class="rv__prname">Rinen Striped Jacket</p>
+												<span class="rv__prcode">448374@N</span>
+											</div>
+											<p class="rv__count">
+												<span class="ic_star"></span>
+												4.8 <span>(36)</span>
+											</p>
+										</div>
+									</a>
+									<a href="#">
+										<div class="rv__review">
+											<p class="rv__text">S은 크롭이래서 살짝 부담스러서 m샀는데 기장이 딱!!이에요</p>
+										</div>
+									</a>
+									<div class="rv__morecnt">
+										<div class="morecnt_section">
+											<button type="button" class="btn__rvlike"></button>
+											좋아요 <span>10</span>
+										</div>
+										<p class="morecnt_section">조회수 <span>10</span></p>
+										<p class="morecnt_section">작성일 <span>2022-04-26 14:25</span></p>
+									</div>
+									<div class="rv__moreinfo">
+										<p class="info_tag">158~168cm</p>
+										<p class="info_tag">40~48kg</p>
+										<p class="info_tag">M</p>
+									</div>
+									<p class="review__list--line"></p>
 								</li>
 							</ul>
+							<div class="review_paging">
+								<p><a href="#" class="btn__prev"><img src="../assets/images/btn_review_prev.gif" alt="이전 페이지" /></a></p>
+								<p><a href="#" class="btn__next"><img src="../assets/images/btn_review_next.gif" alt="다음 페이지" /></a></p>
+							</div>
 						</div>
 					</div>
 				</div>
